--- a/html/index.html
+++ b/html/index.html
@@ -23,25 +23,11 @@
           <img src="../images/logo.png" alt="reconnect-logo" class="logo" />
         </div>
         <div class="intro-descrip">
-          <h2>Our Vision</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius,
-            cupiditate odit ea incidunt quaerat molestias ab deleniti sequi
-            repellat maiores dolor quis accusantium quo magni iusto officiis,
-            nemo, impedit delectus natus aspernatur dolore corporis voluptate
-            inventore! Adipisci maiores ipsum eum excepturi aut omnis pariatur
-            numquam ad dicta rerum, consequuntur debitis delectus nostrum saepe
-            reiciendis facilis nesciunt, nisi quis. Animi, provident?
-            Consequatur, earum. Itaque illo quidem in, ipsam eos veritatis
-            cumque nesciunt cupiditate labore voluptate, porro fugit nihil,
-            dolorem qui? Quae, possimus. Minima blanditiis debitis doloremque.
-            Voluptate, veritatis quisquam eum explicabo maxime quas eaque
-            architecto iste iure ducimus provident. Tempora, distinctio!
-          </p>
+          <h4>Quote goes here</h4>
         </div>
       </section>
       <section class="form-container">
-        <h1 class="form-header">Form Title</h1>
+        <h1 class="form-header">What would you like to do today?</h1>
         <form action="./results.html" method="get" id="form">
           <div class="form-card">
             <h5>Number of Participants</h5>
@@ -83,7 +69,7 @@
                 type="checkbox"
                 name="games"
                 id="games"
-                onchange="showHideGames(this.checked)"
+                onchange="showHideGameGenres(this.checked)"
               />
               <label for="games">Games</label>
             </div>
@@ -128,10 +114,10 @@
                 <input
                   type="checkbox"
                   name="game-genres"
-                  id="cooking"
-                  value="cooking"
+                  id="cooking-game"
+                  value="cooking-game"
                 />
-                <label for="cooking">Cooking</label>
+                <label for="cooking-game">Cooking</label>
               </div>
               <div class="game-genre-item">
                 <input
@@ -293,94 +279,107 @@
 
           <div class="form-card">
             <div class="category">
-              <input type="checkbox" name="cooking" id="cooking" />
-              <label for="exercise">Cooking</label>
+              <input
+                type="checkbox"
+                name="cooking"
+                id="cooking"
+                onchange="showHideMealTypes(this.checked)"
+              />
+              <label for="cooking">Cooking</label>
             </div>
-            <h5>Types of Meals</h5>
-            <p>
-              Please select the types of meals you are interested in cooking
-            </p>
-            <div class="meal-types">
-              <div class="meal-type">
-                <input
-                  type="checkbox"
-                  name="meal-types"
-                  id="breakfast"
-                  value="breakfast"
-                />
-                <label for="breakfast">Breakfast</label>
-              </div>
-              <div class="exer-type">
-                <input
-                  type="checkbox"
-                  name="meal-types"
-                  id="lunch"
-                  value="lunch"
-                />
-                <label for="lunch">Lunch</label>
-              </div>
-              <div class="exer-type">
-                <input
-                  type="checkbox"
-                  name="meal-types"
-                  id="dinner"
-                  value="dinner"
-                />
-                <label for="dinner">Dinner</label>
-              </div>
-              <div class="exer-type">
-                <input
-                  type="checkbox"
-                  name="meal-types"
-                  id="dessert"
-                  value="dessert"
-                />
-                <label for="dessert">Dessert</label>
-              </div>
-              <div class="exer-type">
-                <input
-                  type="checkbox"
-                  name="meal-types"
-                  id="nut-free"
-                  value="nut-free"
-                />
-                <label for="nut-free">Nut-Free</label>
-              </div>
-              <div class="exer-type">
-                <input
-                  type="checkbox"
-                  name="meal-types"
-                  id="gluten-free"
-                  value="gluten-free"
-                />
-                <label for="gluten-free">Gluten-Free</label>
-              </div>
-              <div class="exer-type">
-                <input
-                  type="checkbox"
-                  name="meal-types"
-                  id="dairy-free"
-                  value="dairy-free"
-                />
-                <label for="dairy-free">Dairy-Free</label>
-              </div>
-              <div class="exer-type">
-                <input
-                  type="checkbox"
-                  name="meal-types"
-                  id="vegan"
-                  value="vegan"
-                />
-                <label for="vegan">Vegan</label>
+            <div class="meal-types-container">
+              <h5>Types of Meals</h5>
+              <p>
+                Please select the types of meals you are interested in cooking
+              </p>
+              <div class="meal-types">
+                <div class="meal-type">
+                  <input
+                    type="checkbox"
+                    name="meal-types"
+                    id="breakfast"
+                    value="breakfast"
+                  />
+                  <label for="breakfast">Breakfast</label>
+                </div>
+                <div class="meal-type">
+                  <input
+                    type="checkbox"
+                    name="meal-types"
+                    id="lunch"
+                    value="lunch"
+                  />
+                  <label for="lunch">Lunch</label>
+                </div>
+                <div class="meal-type">
+                  <input
+                    type="checkbox"
+                    name="meal-types"
+                    id="dinner"
+                    value="dinner"
+                  />
+                  <label for="dinner">Dinner</label>
+                </div>
+                <div class="meal-type">
+                  <input
+                    type="checkbox"
+                    name="meal-types"
+                    id="dessert"
+                    value="dessert"
+                  />
+                  <label for="dessert">Dessert</label>
+                </div>
+                <div class="meal-type">
+                  <input
+                    type="checkbox"
+                    name="meal-types"
+                    id="nut-free"
+                    value="nut-free"
+                  />
+                  <label for="nut-free">Nut-Free</label>
+                </div>
+                <div class="meal-type">
+                  <input
+                    type="checkbox"
+                    name="meal-types"
+                    id="gluten-free"
+                    value="gluten-free"
+                  />
+                  <label for="gluten-free">Gluten-Free</label>
+                </div>
+                <div class="meal-type">
+                  <input
+                    type="checkbox"
+                    name="meal-types"
+                    id="dairy-free"
+                    value="dairy-free"
+                  />
+                  <label for="dairy-free">Dairy-Free</label>
+                </div>
+                <div class="meal-type">
+                  <input
+                    type="checkbox"
+                    name="meal-types"
+                    id="vegan"
+                    value="vegan"
+                  />
+                  <label for="vegan">Vegan</label>
+                </div>
               </div>
             </div>
           </div>
+
           <div class="form-card">
             <div class="category">
-              <input type="checkbox" name="mov-tv" id="mov-tv" />
+              <input
+                type="checkbox"
+                name="mov-tv"
+                id="mov-tv"
+                onchange="showHideMovTVGenres(this.checked)"
+              />
               <label for="games">Movies and TV</label>
             </div>
-            <div class="mov-tv-genre-items">
+            <div id="mov-tv-genre-items">
               <div class="mov-tv-genre-item">
                 <input
                   type="checkbox"
